{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 103,
  "lineage": "efdf3db2-80f8-433d-e923-c5934d9c1696",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "capstoneJenkins_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:loadbalancer/app/capstoneJenkins-alb/1cf2707fb0aa654b",
            "arn_suffix": "app/capstoneJenkins-alb/1cf2707fb0aa654b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "capstoneJenkins-alb-622967503.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498628086:loadbalancer/app/capstoneJenkins-alb/1cf2707fb0aa654b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "capstoneJenkins-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06e7413c60b206166"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00cc7788f3e8ea41d"
              },
              {
                "subnet_id": "subnet-0447605487105f9ad"
              }
            ],
            "subnets": [
              "subnet-00cc7788f3e8ea41d",
              "subnet-0447605487105f9ad"
            ],
            "tags": {
              "Name": "example-lb"
            },
            "tags_all": {
              "Name": "example-lb"
            },
            "vpc_id": "vpc-0257575a9765bf851",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "capstoneJenkins_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:listener/app/capstoneJenkins-alb/1cf2707fb0aa654b/582c3198f67b70f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498628086:listener/app/capstoneJenkins-alb/1cf2707fb0aa654b/582c3198f67b70f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:loadbalancer/app/capstoneJenkins-alb/1cf2707fb0aa654b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.capstoneJenkins_lb",
            "module.lb_target_group.aws_lb_target_group.capstoneJenkins_lb_target_group",
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "capstoneJenkins_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70-20250106153739608300000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70",
            "target_id": "i-0982a10ca0d33f2f1"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance",
            "module.lb_target_group.aws_lb_target_group.capstoneJenkins_lb_target_group",
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:014498628086:instance/i-0982a10ca0d33f2f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0982a10ca0d33f2f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0635f8eca43b4f7f7",
            "private_dns": "ip-10-0-1-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "public_ip": "98.84.181.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8c5512886304e7d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc7788f3e8ea41d",
            "tags": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e7413c60b206166",
              "sg-09c37d05f5f0dde5f"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "capstoneJenkins_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70",
            "arn_suffix": "targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:014498628086:loadbalancer/app/capstoneJenkins-alb/1cf2707fb0aa654b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "capstoneJenkins_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70-20250106151248232400000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:014498628086:targetgroup/jenkins-lb-target-group/e7d0c20f9676fa70",
            "target_id": "i-0982a10ca0d33f2f1"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance",
            "module.lb_target_group.aws_lb_target_group.capstoneJenkins_lb_target_group",
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstoneJenkins_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:internet-gateway/igw-04787db637653a42c",
            "id": "igw-04787db637653a42c",
            "owner_id": "014498628086",
            "tags": {
              "Name": "capstoneJenkins-1-igw"
            },
            "tags_all": {
              "Name": "capstoneJenkins-1-igw"
            },
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstoneJenkins_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:route-table/rtb-05e9f6d9d422fbb98",
            "id": "rtb-05e9f6d9d422fbb98",
            "owner_id": "014498628086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "capstoneJenkins-1-private-rt"
            },
            "tags_all": {
              "Name": "capstoneJenkins-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstoneJenkins_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:route-table/rtb-0b37a1495248a29c8",
            "id": "rtb-0b37a1495248a29c8",
            "owner_id": "014498628086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04787db637653a42c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstoneJenkins_public-rt"
            },
            "tags_all": {
              "Name": "capstoneJenkins_public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.capstoneJenkins_public_internet_gateway",
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capstoneJenkins_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072da17290014cad8",
            "route_table_id": "rtb-05e9f6d9d422fbb98",
            "subnet_id": "subnet-06edcf03b1e9db2af"
          },
          "dependencies": [
            "module.networking.aws_route_table.capstoneJenkins_private_subnets",
            "module.networking.aws_subnet.capstoneJenkins_private_subnets",
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3aaa7605c855306",
            "route_table_id": "rtb-05e9f6d9d422fbb98",
            "subnet_id": "subnet-0325d00d205efef7c"
          },
          "dependencies": [
            "module.networking.aws_route_table.capstoneJenkins_private_subnets",
            "module.networking.aws_subnet.capstoneJenkins_private_subnets",
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capstoneJenkins_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae291a00d7fe5f6",
            "route_table_id": "rtb-0b37a1495248a29c8",
            "subnet_id": "subnet-00cc7788f3e8ea41d"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.capstoneJenkins_public_internet_gateway",
            "module.networking.aws_route_table.capstoneJenkins_public_route_table",
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e18c0ed268420a8",
            "route_table_id": "rtb-0b37a1495248a29c8",
            "subnet_id": "subnet-0447605487105f9ad"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.capstoneJenkins_public_internet_gateway",
            "module.networking.aws_route_table.capstoneJenkins_public_route_table",
            "module.networking.aws_subnet.capstoneJenkins_public_subnets",
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstoneJenkins_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:subnet/subnet-06edcf03b1e9db2af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06edcf03b1e9db2af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498628086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstoneJenkins-private-subnet-1"
            },
            "tags_all": {
              "Name": "capstoneJenkins-private-subnet-1"
            },
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:subnet/subnet-0325d00d205efef7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0325d00d205efef7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498628086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstoneJenkins-private-subnet-2"
            },
            "tags_all": {
              "Name": "capstoneJenkins-private-subnet-2"
            },
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstoneJenkins_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:subnet/subnet-00cc7788f3e8ea41d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cc7788f3e8ea41d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498628086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstoneJenkins-public-subnet-1"
            },
            "tags_all": {
              "Name": "capstoneJenkins-public-subnet-1"
            },
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:subnet/subnet-0447605487105f9ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0447605487105f9ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498628086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstoneJenkins-public-subnet-2"
            },
            "tags_all": {
              "Name": "capstoneJenkins-public-subnet-2"
            },
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstoneJenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:vpc/vpc-0257575a9765bf851",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abe6d8a261715a42",
            "default_route_table_id": "rtb-0b14481abcebd862d",
            "default_security_group_id": "sg-034676007ea129bb5",
            "dhcp_options_id": "dopt-0581ae355fe8ca2d5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0257575a9765bf851",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b14481abcebd862d",
            "owner_id": "014498628086",
            "tags": {
              "Name": "capstoneJenkins"
            },
            "tags_all": {
              "Name": "capstoneJenkins"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:security-group/sg-09c37d05f5f0dde5f",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-09c37d05f5f0dde5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "014498628086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498628086:security-group/sg-06e7413c60b206166",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e7413c60b206166",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "014498628086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257575a9765bf851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.capstoneJenkins"
          ]
        }
      ]
    }
  ]
}